# test_mfc

./: .gitignore  README.md
exam_mfc/: CMakeLists.txt  CMakePresets.json  main.cpp  mfcApp.rc  stdafx.h
lib_data_grid/: mfcLib.sln
lib_data_grid/DataGid/: DataGid.aps  DataGid.cpp  DataGid.h  DataGid.rc  DataGid.vcxproj  DataGid.vcxproj.filters  DataGidDlg.cpp  DataGidDlg.h  resource.h
lib_data_grid/DataGid/mfc_lib/GridCtrl/: CellRange.h  GridCell.cpp  GridCell.h  GridCellBase.cpp  GridCellBase.h  GridCtrl.cpp  GridCtrl.h  GridDropTarget.cpp  GridDropTarget.h  InPlaceEdit.cpp  InPlaceEdit.h  TitleTip.cpp  TitleTip.h
lib_data_grid/DataGid/mfc_lib/GridCtrl/NewCellTypes/: GridCellCheck.cpp  GridCellCheck.h  GridCellCombo.cpp  GridCellCombo.h  GridCellDateTime.cpp  GridCellDateTime.h  GridCellNumeric.cpp  GridCellNumeric.h  GridURLCell.cpp  GridURLCell.h
lib_data_grid/DataGid/res/: DataGid.rc2
